# easypath

./: LICENSE  README.en.md  README.md  README.zh.md  pyproject.toml  setup.py
easypath/: __init__.py  command.py  common.py  core.py  tag.py
test/: test.py  test.txt
